# RDK_ModelTest

./: .gitignore  CMakeLists.txt  README.md
dataset/67e3dc29fa506f2129f18e30/input/: input.json  test_dataset.json
dataset/input/: input.json  tennis_1_frame_0002.txt
dataset/output/: result_1.json  result_1_1.json  result_1_10.json  result_1_100.json  result_1_101.json  result_1_102.json  result_1_103.json  result_1_104.json  result_1_105.json  result_1_106.json  result_1_107.json  result_1_108.json  result_1_109.json  result_1_11.json  result_1_110.json  result_1_111.json  result_1_112.json  result_1_113.json  result_1_114.json  result_1_115.json  result_1_116.json  result_1_117.json  result_1_118.json  result_1_119.json  result_1_12.json  result_1_120.json  result_1_121.json  result_1_122.json  result_1_123.json  result_1_124.json  result_1_125.json  result_1_126.json  result_1_127.json  result_1_128.json  result_1_129.json  result_1_13.json  result_1_130.json  result_1_131.json  result_1_132.json  result_1_133.json  (+195 more)
include/: config_json.hpp  detector.hpp  model_node.hpp
src/: config_json.cc  detector.cc  model_node.cc
